Fixing vertical shift

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,6 +70,10 @@
   font-style: normal;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 /* Base Styles */
 html, body {
   height: 100%;
